added inbox component

--- a/resources/sass/app.scss
+++ b/resources/sass/app.scss
@@ -53,3 +53,10 @@
 [x-cloak] {
     display: none;
 }
+
+.sidebar-content-container {
+    min-width: 310px;
+}
+.nav-logo-section {
+    min-width: 310px;
+}
